Migrated load env operation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - "8001:8000"
     environment:
       ENDPOINT: https://images.codevizon.com
+      ENV_TYPE: server
     volumes:
-      - ./media:/app/media
+      - ./media:/media
