--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - "8001:8000"
     environment:
       ENDPOINT: https://images.codevizon.com
+      MONGO_URL: mongodb+srv://souravlayek:7oIYsm1GfyDCKd30@cluster0.ncxolee.mongodb.net/?retryWrites=true&w=majority
     volumes:
       - ./media:/media
