--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 ENDPOINT=http://localhost:8000
-MONGO_URL=mongodb+srv://souravlayek:7oIYsm1GfyDCKd30@cluster0.ncxolee.mongodb.net/?retryWrites=true&w=majority
+# MONGO_URL=mongodb+srv://souravlayek:7oIYsm1GfyDCKd30@cluster0.ncxolee.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb://localhost:27017
