--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         go-version: 1.19
 
-    - name: Build
-      run: go build -v ./cmd/server/
-    - name: Deploy
-      run: docker compose up -d --build
+    # - name: Build
+    #   run: go build -v ./cmd/server/
+    # - name: Deploy
+    #   run: docker compose up -d --build
